--- a/css/estilos.css
+++ b/css/estilos.css
@@ -55,7 +55,7 @@ nav{
 }
 #menu{
 	list-style: none;
-	margin:1px 0 1px 0;
+	margin:1px 0 1px 4px;
 }
 #menu li{			
 	margin:4px 4px 5px 2px;	
@@ -91,42 +91,82 @@ nav{
 }
 section{
 	width: 800px;
-	height:800px;
+	height:500px;
 	background: #FFFFFF;
 	float: left;
 }
+#i1{
+	width: 800px;
+	border-radius: 5px;
+}
+#p1{
+	font-family: 'Franklin-gothic-book';
+	font-size: 20px;
+	text-align: justify;
+	margin-top: 5px;
+}
+h4{
+	font-family: 'Franklin-gothic-heavy';
+	color:black;
+	text-align: left;
+	font-size:20px;	
+	margin: 20px 5px 2px 300px;
+}
+#p4{
+	font-family: 'Franklin-gothic-book';
+	font-size: 18px;
+	text-align: justify;
+	margin: 15px 5px 5px 300px;
+}
+#i2{
+	width: 280px;
+	border-radius: 5px;
+	margin-top: 50px;
+}
 aside{
 	width: 390px;
-	height: 852px;
+	height: 700px;
 	float:left;
 	background: #F0B429;
 	margin: -52px 0 0 10px;
 	border-radius: 5px;
 }
-img{
-	width: 100%;
-	border-radius: 5px;
+#p2{
+	font-family: 'Franklin-gothic-book';
+	font-size: 25px;
+	text-align: center;
+	margin: 60px 10px 20px 10px;
+}
+h3{
+	font-family: 'Franklin-gothic-heavy';
+	color:black;
+	text-align: left;
+	font-size:35px;	
+	margin: 30px 0px 20px 10px;
+}
+#i{
+	text-decoration: none;
+	font-family: 'Franklin-gothic-book';
+	font-size: 20px;
+	color:blue;	
+}
+#i:hover{
+	text-decoration: none;
+	font-family: 'Franklin-gothic-book';
+	font-size: 30px;
+	color:blue;	
 }
 footer{
 	width: 1200px;
-	height: 40px;
-	font-size: 20px;	
-	text-align: center;	
-	background: #005883;
-	float:left;
+	height: 60px;	
+	background-image: url(../img/Pie.jpg);
+	float:left;	
 	border-radius: 5px;
-	font-weight: bold;
-	margin-top: 5px;
 }
-#p1{
-	font-family: 'Franklin-gothic-book';
-	font-size: 22px;
-	text-align: justify;
-	margin-top: 5px;
-}
-#p2{
-	font-family: 'Franklin-gothic-book';
+#p3{
 	font-size: 20px;
-	text-align: center;
-	margin-top: 30px;
+	color:white;	
+	text-align: center;	
+	margin-top: 20px;
 }
+
