--- a/css/estilos.css
+++ b/css/estilos.css
@@ -90,7 +90,7 @@ nav{
 	background: #FFFFFF;
 	color:#005883;
 }
-section{
+#principal{
 	width: 800px;
 	height:648px;
 	background: #FFFFFF;
@@ -174,7 +174,7 @@ footer{
 	margin-top: 20px;
 }
 #p5{
-	margin: 10px;
+	margin: 5px;
 	font-size: 20px;
 }
 /*Específico para autores*/
@@ -220,4 +220,50 @@ footer{
 	height: 640px;
 	border-radius: 5px;
 	margin:5px 10px 5px 10px;
+}
+/*Específico para audio*/
+#sonido{
+	width:400px;
+	height: 150px;
+}
+/*Para twiter y contador*/
+#twit{
+	margin:20px;
+}
+#contador{
+	margin:50px 5px 5px 5px;
+}
+/*Para páginas de actividades*/
+#juego1{
+	float:left;
+	width: 370px;
+	margin:1px 10px 1px 10px;
+}
+#juego2{
+	float:left;
+	width: 370px;
+	margin:1px 10px 1px 10px;;
+}
+#juego{
+	border-radius: 5px;
+	margin: 5px;
+    opacity: 0.8;
+    border: 5px solid #eee;
+    -webkit-transition: all 0.5s ease;
+    -moz-transition: all 0.5s ease;
+    -o-transition: all 0.5s ease;
+    -webkit-box-reflect: below 0px -webkit-gradient(linear, left top, left bottom, from(transparent), color-stop(.7, transparent), to(rgba(0,0,0,0.1)));
+} 
+#juego:hover {
+    opacity: 1;
+    -webkit-box-reflect: below 0px -webkit-gradient(linear, left top, left bottom, from(transparent), color-stop(.7, transparent), to(rgba(0,0,0,0.4)));
+    -webkit-box-shadow: 0px 0px 20px rgba(255,255,255,0.8);
+    -moz-box-shadow: 0px 0px 20px rgba(255,255,255,0.8);
+    box-shadow: 0px 0px 20px rgba(255,255,255,0.8);
+}
+#p7{
+	font-family: 'Franklin-gothic-book';
+	font-size: 18px;
+	text-align: justify;
+	margin-top: 20px;
 }
